--- a/ElvenGames/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElvenGames/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,8 +158,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonBP/Maps/Prueabas
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Juan/Character/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -865,31 +864,89 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.Collision.Collision,
+CryptoKeysSettings=InputSettings.Bindings.ActionMappings,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings,
+GameMapsSettings=InputSettings.Bindings.ActionMappings,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings,
+AISystem=InputSettings.Bindings.ActionMappings,
+AnimationSettings=InputSettings.Bindings.ActionMappings,
+AudioSettings=InputSettings.Bindings.ActionMappings,
+CollisionProfile=InputSettings.Bindings.ActionMappings,
+ConsoleSettings=InputSettings.Bindings.ActionMappings,
+CookerSettings=InputSettings.Bindings.ActionMappings,
+CrowdManager=InputSettings.Bindings.ActionMappings,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings,
+Engine=InputSettings.Bindings.ActionMappings,
+HierarchicalLODSettings=InputSettings.Bindings.ActionMappings,
+InputSettings=InputSettings.Bindings.ActionMappings,
+RecastNavMesh=InputSettings.Bindings.ActionMappings,
+NavigationSystemV1=InputSettings.Bindings.ActionMappings,
+NetworkSettings=InputSettings.Bindings.ActionMappings,
+PhysicsSettings=InputSettings.Bindings.ActionMappings,
+RendererSettings=InputSettings.Bindings.ActionMappings,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings,
+SlateSettings=InputSettings.Bindings.ActionMappings,
+StreamingSettings=InputSettings.Bindings.ActionMappings,
+TutorialSettings=InputSettings.Bindings.ActionMappings,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.ActionMappings,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings,
+HTML5TargetSettings=InputSettings.Bindings.ActionMappings,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings,
+MacTargetSettings=InputSettings.Bindings.ActionMappings,
+LuminRuntimeSettings=InputSettings.Bindings.ActionMappings,
+MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings,
+MagicLeapSettings=InputSettings.Bindings.ActionMappings,
+OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings,
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Juan/Character/CharacterController
-MRUItem1=/Game/Juan/Character/Animations/ThirdPerson_AnimBP
-MRUItem2=/Game/Juan/Character/Animations/Hang_Idle
-MRUItem3=/Game/Juan/Character/Animations/ThirdPerson_IdleRun_2D
-MRUItem4=/Game/Juan/Character/Animations/ThirdPersonIdle
-MRUItem5=/Game/Juan/Character/Animations/ThirdPerson_Jump
-MRUItem6=/Game/Juan/Character/Animations/ThirdPerson_Crouch
-MRUItem7=/Game/Juan/Character/Animations/MoveRight
-MRUItem8=/Game/Juan/Character/Animations/MoveLeft
-MRUItem9=/Game/Juan/Character/Animations/MOB1_CrouchWalk_F
-MRUItem10=/Game/Juan/Character/Animations/JumpRight_Montage
-MRUItem11=/Game/Juan/Character/Animations/JumpRight
-MRUItem12=/Game/Juan/Character/Animations/JumpLeft
-MRUItem13=/Game/Juan/Character/Animations/JumpLeft_Montage
-MRUItem14=/Game/Juan/Character/Animations/Crouch_to_Stand
-MRUItem15=/Game/Juan/Character/Animations/Crouch_Idle
-MRUItem16=/Game/Juan/Character/Animations/CornerRight
-MRUItem17=/Game/Juan/Character/Animations/CornerLEft
-MRUItem18=/Game/Juan/Character/Animations/Climb_Montage
-MRUItem19=/Game/Juan/Character/Animations/Climb
+MRUItem0=/Game/ThirdPersonBP/Maps/Prueabas
+MRUItem1=/Game/Juan/Character/CharacterController
+MRUItem2=/Game/Juan/Character/Animations/ThirdPerson_AnimBP
+MRUItem3=/Game/Juan/Character/Animations/Hang_Idle
+MRUItem4=/Game/Juan/Character/Animations/ThirdPerson_IdleRun_2D
+MRUItem5=/Game/Juan/Character/Animations/ThirdPersonIdle
+MRUItem6=/Game/Juan/Character/Animations/ThirdPerson_Jump
+MRUItem7=/Game/Juan/Character/Animations/ThirdPerson_Crouch
+MRUItem8=/Game/Juan/Character/Animations/MoveRight
+MRUItem9=/Game/Juan/Character/Animations/MoveLeft
+MRUItem10=/Game/Juan/Character/Animations/MOB1_CrouchWalk_F
+MRUItem11=/Game/Juan/Character/Animations/JumpRight_Montage
+MRUItem12=/Game/Juan/Character/Animations/JumpRight
+MRUItem13=/Game/Juan/Character/Animations/JumpLeft
+MRUItem14=/Game/Juan/Character/Animations/JumpLeft_Montage
+MRUItem15=/Game/Juan/Character/Animations/Crouch_to_Stand
+MRUItem16=/Game/Juan/Character/Animations/Crouch_Idle
+MRUItem17=/Game/Juan/Character/Animations/CornerRight
+MRUItem18=/Game/Juan/Character/Animations/CornerLEft
+MRUItem19=/Game/Juan/Character/Animations/Climb_Montage
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1083,6 +1140,206 @@ InventoryComponent_C.Events=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Screenshots=True
+Engine.Framerate=True
+Engine.Timecode=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Audio=True
+HTML5TargetSettings.Canvas=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+MagicLeapSDKSettings.SDK Config=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+MagicLeapSettings.General=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Collision=False
@@ -1104,6 +1361,8 @@ RecentlyPlaced=/Game/Juan/Character/CharacterController.CharacterController;
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[12]\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
