--- a/ElvenGames/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElvenGames/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,9 +87,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
-bInvertMouseLookYAxis=False
-bInvertOrbitYAxis=False
-bInvertMiddleMousePan=False
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
 bEnableLayerSnap=False
 ActiveSnapLayerIndex=0
@@ -158,7 +155,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonBP/Maps/Prueabas
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
